# riskgraph-go2

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  requirements-ci.txt
.github/workflows/: ci.yml
docs/: HW_VERIFICATION.md  architecture.md  demo.md  hardware_integration.md  prior_art.md  validation.md
docs/audits/: audit_log.md  codex_architecture_audit_prompt.md  codex_final_audit_prompt.md  codex_midpoint_audit_prompt.md
scripts/: export_demo_results.py  ros_end_to_end_check.py  run_offline_demo.sh  run_tests.sh
src/riskgraph_bringup/: package.xml  setup.cfg  setup.py
src/riskgraph_bringup/config/: default.yaml
src/riskgraph_bringup/config/segment_seeds/: hw_glossy_loop.json
src/riskgraph_bringup/launch/: demo_offline.launch.py  integration.launch.py
src/riskgraph_core/: package.xml  setup.cfg  setup.py
src/riskgraph_core/riskgraph_core/: __init__.py  config.py  events.py  explainer.py  scoring.py  seed.py  segments.py  store.py
src/riskgraph_core/test/: conftest.py  test_config.py  test_cross_run_memory.py  test_events.py  test_explainer.py  test_scoring.py  test_seed.py  test_segments.py  test_store.py
src/riskgraph_demo/: package.xml  setup.cfg  setup.py
src/riskgraph_demo/fixtures/: scenario_glossy_hallway.json
src/riskgraph_demo/riskgraph_demo/: offline_demo.py  scenario.py  synthetic_publisher.py
src/riskgraph_demo/test/: conftest.py  test_offline_demo.py
src/riskgraph_explainer/: package.xml  setup.cfg  setup.py
src/riskgraph_explainer/riskgraph_explainer/: explainer_node.py
src/riskgraph_memory/: package.xml  setup.cfg  setup.py
src/riskgraph_memory/riskgraph_memory/: conversions.py  memory_node.py
src/riskgraph_memory/riskgraph_memory/adapters/: helix_adapter.py  safety_adapter.py  tactile_adapter.py
src/riskgraph_memory/test/: conftest.py  test_adapters.py  test_conversions.py  test_memory_node_seed.py
src/riskgraph_msgs/: CMakeLists.txt  package.xml
src/riskgraph_msgs/msg/: RiskEvent.msg  RiskFactor.msg  Route.msg  RouteExplanation.msg  RouteScore.msg  RouteScoreArray.msg  RouteSegment.msg
src/riskgraph_msgs/srv/: QuerySegmentRisk.srv  ScoreRoutes.srv
src/riskgraph_planner/: package.xml  setup.cfg  setup.py
src/riskgraph_planner/riskgraph_planner/: planner_node.py
tests/hw/: README.md  run_scenario.sh  scenario_glossy_loop.py
tests/hw/lib/: scenario_runner.py
