<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riskgraph_bringup</name>
  <version>0.1.1</version>
  <description>Launch files and configs for RiskGraph-Go2</description>
  <maintainer email="yusuf.a.guenena@gmail.com">yusufdxb</maintainer>
  <license>MIT</license>

  <exec_depend>riskgraph_memory</exec_depend>
  <exec_depend>riskgraph_planner</exec_depend>
  <exec_depend>riskgraph_explainer</exec_depend>
  <exec_depend>riskgraph_demo</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
