<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riskgraph_core</name>
  <version>0.1.0</version>
  <description>Pure-Python risk model, persistence, scoring, and explanation core for RiskGraph-Go2 (no ROS coupling)</description>
  <maintainer email="yusuf.a.guenena@gmail.com">yusufdxb</maintainer>
  <license>MIT</license>

  <test_depend>pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
