<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riskgraph_explainer</name>
  <version>0.1.1</version>
  <description>Standalone explanation broadcaster for RiskGraph-Go2 route scores</description>
  <maintainer email="yusuf.a.guenena@gmail.com">yusufdxb</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>riskgraph_msgs</depend>
  <depend>riskgraph_core</depend>

  <test_depend>pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
